--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,13 @@
-<title>ಠ_ಠ Not Found</title>
-<body style="margin: 0; background: #000;">
-  <canvas id="_" style="width:100%;height:100%"></canvas>
+<head>
+  <title>EyesNotFound</title>
+
+  <!-- favicon.png can be found in root -->
+  <!-- Even though base64 is bigger, it saves around 57 bytes when zipped -->
+  <link
+    rel="icon"
+    href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQAAAABbAUdZAAAAWElEQVR4AWNAAzwSEgYMLAIcCgxMCiwOEILRgamBgaGBkQFMgLkIWbBiiDaswLFBgYHhkEMCA6OLwgIGJhdFBQYWFyUFBg4XFQUG/ifqHxgYnBwUoOowAQDUrA3nguIP3QAAAABJRU5ErkJggg=="
+  />
+</head>
+<body style="margin: 0; background: #000">
+  <canvas id="_" style="width: 100%; height: 100%"></canvas>
 </body>
