--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQAAAABbAUdZAAAAWElEQVR4AWNAAzwSEgYMLAIcCgxMCiwOEILRgamBgaGBkQFMgLkIWbBiiDaswLFBgYHhkEMCA6OLwgIGJhdFBQYWFyUFBg4XFQUG/ifqHxgYnBwUoOowAQDUrA3nguIP3QAAAABJRU5ErkJggg=="
   />
 </head>
-<body style="margin: 0; background: #000">
-  <canvas id="_" style="width: 100%; height: 100%"></canvas>
+<body bgcolor="0" style="margin: 0">
+  <canvas id="_"></canvas>
 </body>
