--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQAAAABbAUdZAAAAWElEQVR4AWNAAzwSEgYMLAIcCgxMCiwOEILRgamBgaGBkQFMgLkIWbBiiDaswLFBgYHhkEMCA6OLwgIGJhdFBQYWFyUFBg4XFQUG/ifqHxgYnBwUoOowAQDUrA3nguIP3QAAAABJRU5ErkJggg=="
   />
 </head>
-<body bgcolor="0" style="margin: 0">
-  <canvas id="_"></canvas>
+<body bgcolor="0" style="margin:0;overflow:hidden;">
+  <canvas id="_" style="position:absolute;top:50%;left:50%;transform-origin:0 0;image-rendering:pixelated;image-rendering:crisp-edges"></canvas>
 </body>
