Disable alpha to increase performance

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,5 @@
   />
 </head>
 <body bgcolor="0" style="margin:0;overflow:hidden;">
-  <canvas id="_" style="position:absolute;top:50%;left:50%;transform-origin:0 0;image-rendering:pixelated;image-rendering:crisp-edges"></canvas>
+  <canvas id="_" style="position:absolute;top:50%;left:50%;transform-origin:0 0"></canvas>
 </body>
