Rename to Lost Vision, added heart icon, set image-rendering for pixel art

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
-<head>
-  <title>EyesNotFound</title>
-  <!-- favicon.png can be found in root -->
-  <!-- Even though base64 is bigger, it saves around 57 bytes when zipped -->
-  <link
-    rel="icon"
-    href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQAAAABbAUdZAAAAWElEQVR4AWNAAzwSEgYMLAIcCgxMCiwOEILRgamBgaGBkQFMgLkIWbBiiDaswLFBgYHhkEMCA6OLwgIGJhdFBQYWFyUFBg4XFQUG/ifqHxgYnBwUoOowAQDUrA3nguIP3QAAAABJRU5ErkJggg=="
-  />
-</head>
+<title>Lost Vision</title>
+<!-- favicon.png can be found in root -->
+<!-- Even though base64 is bigger, it saves around 57 bytes when zipped -->
+<link
+  rel="icon"
+  href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQAAAABbAUdZAAAAMklEQVR4AWMgFrAxNhgwsDEcSEAhHhwAEglwIrEBSBjCCWMGICENJ6QYGNj/8EEIYgEAaHYNLtdNbMkAAAAASUVORK5CYII="
+/>
 <body bgcolor="0" style="margin:0;overflow:hidden;">
-  <canvas id="_" style="position:absolute;top:50%;left:50%;transform-origin:0 0"></canvas>
+  <canvas id="_" style="position:absolute;top:50%;left:50%;transform-origin:0 0;image-rendering:pixelated;image-rendering:crisp-edges"></canvas>
 </body>
