Rewrite echo and add flag png

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,5 @@
   href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgAQAAAABbAUdZAAAAMklEQVR4AWMgFrAxNhgwsDEcSEAhHhwAEglwIrEBSBjCCWMGICENJ6QYGNj/8EEIYgEAaHYNLtdNbMkAAAAASUVORK5CYII="
 />
 <body bgcolor="0" style="margin:0;overflow:hidden;">
-  <canvas id="_" style="position:absolute;top:50%;left:50%;transform-origin:0 0;image-rendering:pixelated;image-rendering:crisp-edges"></canvas>
+  <canvas id="_" style="position:fixed;top:50%;left:50%;transform-origin:0 0;image-rendering:pixelated;image-rendering:crisp-edges"></canvas>
 </body>
